<resources>
    <string name="app_name">rTraffic</string>
    <string name="help_label">Help</string>
    <string name="google_sign_in">Google Sign-in</string>
    <string name="rtraffic_sign_in_policy">By signing-in, you agree to be bound by rTraffic\'s \\nterms of services and privacy policy.</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_search">Search</string>
    <string name="title_activity_maps">Map</string>
    <string name="permission_location_err">We seem to be missing the permissions that allow us to access location.</string>
    <string name="permission_location_fatal">rTraffic cannot operate without location access.</string>
    <string name="exit_on_back">Press the back button once again to close the application.</string>
    <string name="loading_main">Getting map and GPS data</string>
    <string name="something_went_wrong">Something went wrong, please try again later.</string>
    <string name="err_inet_could_not_connect">Could not connect to system, please check your internet connectivity.</string>
    <string name="firebase_token_update_failure">Failed to update messaging token, you may not receive real-time updates.</string>
    <string name="firebase_token_attempt_success">You have successfully re-registered for real-time notifications. Congrats!</string>
    <string name="main_reports_something_went_wrong">Could not communicate with API to fetch traffic reports :(</string>
    <string name="traffic_report_multipath_chooser">Found %1$d path(s), please select the correct path by tapping on it.</string>
    <string name="traffic_report_singlepath">Only found one path, auto selected.</string>
    <string name="traffic_report_initial_instructions">Please tap and hold at the location where you believe the traffic congestion begins.</string>
    <string name="traffic_report_second_instruction">Now tap and hold the location where you believe the traffic congestion ends.</string>
    <string name="traffic_report_polyline_select">If you\'re satisfied with your selection, please confirm below. If not, you can choose another path, or start anew via the Clear button.</string>
    <string name="clear">Clear</string>
    <string name="commit">Commit</string>
    <string name="report">Report</string>
    <string name="submit">Submit</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="start_map">Start</string>
    <string name="end_map">End</string>
    <string name="toggle_OFF">Off</string>
    <string name="no_results">No entries were found.</string>
    <string name="entry_submit">Your entry has been submitted.</string>
    <string name="traffic_report_toast_clear_markers">Markers and pathways have been cleared.</string>
    <string name="traffic_report_snackbar_confirm_report">Ready to submit report</string>
    <string name="traffic_report_dialog_compose_report">Compose Report</string>
    <string name="traffic_report_dialog_congestion_severity">Congestion Severity</string>
    <string name="traffic_report_dialog_comment">Comment (if any)</string>
    <string name="traffic_report_dialog_report_anonymously">Submit the report anonymously</string>
    <string name="traffic_report_state_congested">Fully Congested</string>
    <string name="traffic_report_state_sbm">Slow but moving</string>
    <string name="traffic_report_state_free">No Congestion</string>
    <string name="traffic_report_thank_you">Thank you for your report!</string>
    <string name="main_comment_ui_no_comments_available">This intersection does not have any user comment(s) yet.</string>
    <string name="excluded_regions_dialog_title">Add Region</string>
    <string name="excluded_regions_dialog_lint">Enter a name</string>
    <string name="excluded_regions_listview_no_results">You haven\'t registered excluded regions yet.</string>
    <string name="excluded_regions_successful_deletion">The entry has been successfully removed.</string>
    <string name="excluded_regions_startup_tooltip">Long press anywhere in the map to start the process of adding a new region!</string>
    <string name="poi_not_ready_yet">The list of intersection(s) is not ready yet, please retry after they have been loaded onto the map.</string>
    <string name="service_notif_main_header">Contribute Traffic Data</string>
    <string name="service_notif_main_body">Stuck in %s?</string>
    <string name="service_notif_affirmative_answer">Submit Report</string>
    <string name="service_notif_negative_answer">Cancel</string>
    <string name="feedback_thank_you">Thank you for your feedback!</string>
    <string name="search_hint">Search for Locations</string>
    <string name="req_failed_outdated_data">API request failed, working with outdated data.</string>
    <string name="update_underway">Update is currently underway...</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="slide_1_title">Hello Commuters!</string>
    <string name="slide_1_desc">The easiest way to plan your journey!</string>
    <string name="slide_2_title">Live Updates!</string>
    <string name="slide_2_desc">You will be getting traffic updates at Real Time, see it as it happens.</string>
    <string name="slide_3_title">Points of Interest!</string>
    <string name="slide_3_desc">You can register to only get updates from places you have a Special interest in.</string>
    <string name="slide_4_title">Region Exclusions!</string>
    <string name="slide_4_desc">We support silencing app activities at regions of your choice so you don\'t feel bothered.</string>
    <string name="title_text">Realtime Traffic Management</string>
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="signed_in">Signed in</string>
    <string name="signing_in">Signing in…</string>
    <string name="signed_out">Signed out</string>
    <string name="signed_in_err">"Error: please check logs."</string>
    <string name="error_null_person">
        Error: Plus.PeopleApi.getCurrentPerson returned null. Ensure that the Google+ API is
        enabled for your project, you have a properly configured google-services.json file
        and that your device has an internet connection.
    </string>
    <string name="loading">Loading…</string>
    <string name="auth_code_fmt">Auth Code: %s</string>
    <string name="id_token_fmt">ID Token: %s</string>
    <string name="play_services_error_fmt">Google Play Services Error: %i</string>
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>
    <string name="refresh_token">Get Fresh Token</string>
    <string name="desc_google_icon">Google Logo</string>
    <string name="contacts_permission_rationale">Contacts access is needed in order to retrieve your email address.</string>
    <string name="name_sign_in_activity">SignInActivity</string>
    <string name="desc_sign_in_activity">Signing in, signing out, and revoking access.</string>
    <string name="desc_sign_in_activity_scopes">Signing in, signing out, and revoking access with Google Drive permissions.</string>
    <string name="name_id_token_activity">IdTokenActivity</string>
    <string name="desc_id_token_activity">Retrieving an ID Token for the user.</string>
    <string name="desc_auth_code_activity">Demonstrate retrieving an auth code for authorizing your server.</string>
    <string name="name_auth_code_activity">ServerAuthCodeActivity</string>
    <string name="desc_rest_activity">Demonstrate using Google Sign In with a Google REST API</string>
    <string name="name_rest_activity">RestApiActivity</string>
    <string name="connections_fmt">Connections: %1$s</string>
    <string name="msg_contacts_failed">Get contacts failed.</string>
    <string name="info_report">Report Information</string>
    <string name="traffic_report">Report Traffic</string>
    <string name="title_activity_settings">Settings</string>
    <string name="nav_acct_mgmt">Account Mgmt.</string>
    <string name="nav_exclude_regions">Excluded Regions</string>
    <string name="nav_notif_reg">Points of Interest</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_help">Help</string>
    <string name="nav_feedback">Send Feedback</string>
    <string name="nav_comment_overlay">Comments</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_title_sync_frequency">Cloud Sync Interval</string>
    <string name="pref_summary_sync_frequency">Synchronizes %s</string>
    <string-array name="pref_sync_frequency_titles">
        <item>Every 5 minutes</item>
        <item>Every 15 minutes</item>
        <item>Every 30 minutes</item>
        <item>Every 1 hour</item>
        <item>Every 3 hours</item>
        <item>Never</item>
    </string-array>
    <string name="pref_sync_frequency_default_value">5</string>
    <string-array name="pref_sync_frequency_values">
        <item>5</item>
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>-1</item>
    </string-array>
    <string name="pref_title_report_history">Report Retention</string>
    <string name="pref_summary_report_history">Fetch data for the last %s</string>
    <string-array name="pref_report_history_entries">
        <item>1 hour(s)</item>
        <item>3 hour(s)</item>
        <item>6 hour(s)</item>
        <item>12 hour(s)</item>
        <item>24 hour(s)</item>
    </string-array>
    <string-array name="pref_report_history_values">
        <item>1</item>
        <item>3</item>
        <item>6</item>
        <item>12</item>
        <item>24</item>
    </string-array>
    <string name="pref_report_history_default_value">1</string>
    <string name="pref_notif_enable">Enable Notifications</string>
    <string name="pref_background_service_enable">Enable Background Service</string>
    <string name="pref_background_service_summary">Controls whether the app asks you to contribute data</string>
    <string name="pref_notif_enable_summary">Controls whether the app shows real-time notifications</string>
    <string name="pref_hide_excess_markers_enable">Hide Intersections without Data</string>
    <string name="pref_hide_excess_markers_summary">Controls whether intersections that the app does not have data in should be hidden or not.</string>
    <string name="nav_mylocation">My Location</string>
    <string name="action_settings">Settings</string>
    <string name="add_geofences">Add geofences</string>
    <string name="remove_geofences">Remove geofences</string>
    <string name="geofence_transition_entered">Entered</string>
    <string name="geofence_transition_exited">Exited</string>
    <string name="unknown_geofence_transition">Unknown Transition</string>
    <string name="not_connected">GoogleApiClient no yet connected. Try again.</string>
    <string name="geofence_not_available">Geofence service is not available now</string>
</resources>