<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference
        android:key="pref_notifications"
        android:title="@string/pref_notif_enable"
        android:summary="@string/pref_notif_enable_summary"
        android:defaultValue="true" />

    <CheckBoxPreference
        android:key="pref_background_service"
        android:title="@string/pref_background_service_enable"
        android:summary="@string/pref_background_service_summary"
        android:defaultValue="true" />

    <CheckBoxPreference
        android:key="pref_hide_excess_markers"
        android:title="@string/pref_hide_excess_markers_enable"
        android:summary="@string/pref_hide_excess_markers_summary"
        android:defaultValue="false" />

    <ListPreference
        android:key="pref_location_provider"
        android:title="@string/pref_location_provider_title"
        android:summary="@string/pref_location_provider_summary"
        android:dialogTitle="@string/pref_location_provider_title"
        android:entries="@array/pref_location_provider_options"
        android:entryValues="@array/pref_location_provider_options_values"
        android:defaultValue="@string/pref_location_provider_options_default_value" />

    <ListPreference
        android:key="pref_report_history"
        android:title="@string/pref_title_report_history"
        android:summary="@string/pref_summary_report_history"
        android:dialogTitle="@string/pref_title_report_history"
        android:entries="@array/pref_report_history_entries"
        android:entryValues="@array/pref_report_history_values"
        android:defaultValue="@string/pref_report_history_default_value" />

</PreferenceScreen>